# CaseStudy_CDIO

./: .gitignore  FILE_OVERVIEW.txt  README.md  README_cloud.md  model_open.py  pinecone_manager.py  pyproject.toml  script_old.js  test.js  test_convert.py  test_pinecone.py  test_semantic_action_chain.py
api_casestudy/: README.md  __init__.py  main.py
api_casestudy/core/: __init__.py  config.py
api_casestudy/db/: __init__.py  database.py
api_casestudy/pipelines/: __init__.py  builder.py
api_casestudy/routers/: __init__.py  agent.py  semantic.py
api_casestudy/schemas/: __init__.py  agent.py  semantic.py
api_casestudy/services/: __init__.py  agent_service.py  semantic_service.py  state_repository.py  tts_engine.py  voice_selector.py
casestudy/: README.md  main.py
casestudy/agent/: __init__.py  const.py  graph.py  memory.py  runtime_store.py  state.py
casestudy/agent/chains/: __init__.py  action.py  base.py  persona.py  policy.py  responder.py  scene.py
casestudy/agent/nodes/: __init__.py  action.py  egress.py  ingress.py  persona.py  policy.py  responder.py  semantic.py  state_update.py  transition.py
casestudy/app/: __init__.py  main.py
casestudy/app/api/: __init__.py
casestudy/app/core/: config.py
casestudy/app/crud/: case_crud.py
casestudy/app/db/: database.py
casestudy/app/dependencies/: cases.py
casestudy/app/frontend/: chatframe.html  chatframe.js  index.html  listOfCase.html  listOfCase.js  listOfCase.tailwind.js  login.html  (+9 more)
casestudy/utils/: auto_save.py  create_DB.py  document_builder.py  load.py  save.py  semantic_extract.py
(+20 files in other folders)
