[project]
name = "casestudy"
version = "0.1.0"
description = ""
authors = [
    {name = "Felix-Think",email = "felixthink.ai@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0.0"
dependencies = [
    "langchain-google-genai (>=2.1.12,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-openai (>=0.3.34,<0.4.0)",
    "langgraph (>=0.6.8,<0.7.0)",
    "langsmith (>=0.4.32,<0.5.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.31,<0.4.0)",
    "chromadb (>=1.1.1,<2.0.0)",
    "fastapi (>=0.119.1,<0.120.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pymongo[srv] (>=4.15.3,<5.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "certifi (>=2025.10.5,<2026.0.0)",
    "pydantic-settings (>=2.6.1,<3.0.0)"
    "pinecone (>=7.3.0,<8.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
